Changed Order classes to handle Exceptions